# steam_community_info_analysis

./: .gitignore  .replit  COOKIE_GUIDE.md  LICENSE  README.md  README_SCRAPER.md  REPLIT_DEPLOYMENT.md  REPLIT_DEPLOYMENT_GUIDE.md  analyzer.py  backend_run_once_pg.py  collector.py  config.example.toml  config.toml.example  config_loader.py  export_sessions.py  frontend_api.py  init_database.py  init_db.sql  main.py  pg_storage.py  pyproject.toml  steam_api.py  storage.py  web_export.py
b_replit/: .replit
backend/: .env.example  .replit  README.md  collector.py  collector_old.py.bak  collector_old_v1.py.bak  cookie_store.py  main.py  pyproject.toml  refresh_steam_cookies.py  refresh_steam_cookies_udc.py  requirements.txt  steam_api_sample.json  steam_scraper.py  test_api.py
f_replit/: .replit
frontend/: .env.example  .replit  app.py  pyproject.toml  requirements.txt
frontend/static/css/: style.css
frontend/static/js/: theme.js
frontend/templates/: base.html  dashboard.html  error.html  index.html
web/: index.html
