[project]
name = "steam-dashboard"
version = "1.0.0"
description = "Steam 游戏时长可视化分析前端"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "plotly>=5.18.0",
    "pandas>=2.1.3",
    "jinja2>=3.1.6",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

